add: header,bg,login

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #1c1c1c; /* Set this to match the darkest color of your background component */
+        color: #fff; /* Adjust text color if necessary */
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
