add:space & space form

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
       body {
         margin: 0;
         padding: 0;
-        background-color: #1c1c1c; /* Set this to match the darkest color of your background component */
+        background-color: #151719; /* Set this to match the darkest color of your background component */
         color: #fff; /* Adjust text color if necessary */
       }
     </style>
