add: avatar shower

--- a/web/index.html
+++ b/web/index.html
@@ -9,13 +9,20 @@
       body {
         margin: 0;
         padding: 0;
-        background-color: #151719;
+        background-color: #0d1117;
         color: #fff;
       }
     </style>
   </head>
   <body>
     <div id="root"></div>
+
+    <!--    <div className={'flex justify-center items-center mt-40'}>-->
+    <!--    <widget-web-component theme="solarFlare" website-name="oksdfsdf"-->
+    <!--                          projectid="cm1f3szzw0001ihr9g8s8lut1"></widget-web-component>-->
+    <!--    </div>-->
+    <!--    <script src="https://widget.opinify.in/widget.umd.js"></script>-->
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
